# figma-mcp

./: .gitignore  MANIFEST.in  README.md  build_and_publish.sh  pyproject.toml
figma_mcp/: .env.example  clean_node.py  main.py
figma_mcp.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
